# astroquery-cli

./: .gitignore  LICENSE  README.md  babel.cfg  npx-entry.js  package.json  pyproject.toml
.github/: build-pacman.sh
.github/scripts/: build-deb.sh  build-mac.sh  build-pacman.sh  build-rpm.sh  build-windows.ps1
.github/workflows/: build-deb.yml  build-package.yml  build-pacman.yml  build-test.yml
astroquery_cli/: __init__.py  babel.cfg  i18n.py  main.py  utils.py
astroquery_cli/locales/fr/LC_MESSAGES/: messages.mo
astroquery_cli/locales/ja/LC_MESSAGES/: messages.mo
astroquery_cli/locales/zh/LC_MESSAGES/: messages.mo
astroquery_cli/modules/: alma_cli.py  esasky_cli.py  eso_cli.py  gaia_cli.py  heasarc_cli.py  irsa_cli.py  irsa_dust_cli.py  jpl_cli.py  jplhorizons_cli.py  jplsbdb_cli.py  mast_cli.py  nasa_ads_cli.py  ned_cli.py  nist_cli.py  sdss_cli.py  simbad_cli.py  splatalogue_cli.py  vizier_cli.py
astroquery_cli/options/: field.py
astroquery_cli/tests/: test_field_validity.py
locales/: backfill_translated.py  check-update.sh  check_update.sh  clean-dedupe.sh  clean_dedupe.sh  clean_po_files.py  extract-untranslated.sh  extract_untranslated.py  extract_untranslated.sh  i18n-update.sh  messages.pot  update-po.sh
locales/fr/LC_MESSAGES/: messages.mo  messages.po  messages.po.bak
locales/ja/LC_MESSAGES/: messages.mo  messages.po  messages.po.bak
locales/zh/LC_MESSAGES/: messages.mo  messages.po  messages.po.bak
locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
~/.aqc/: config.ini
