# pyproject.toml

[tool.poetry]
name = "astroquery-cli"
version = "1.0.0"
description = "CLI for astroquery modules with autocompletion."
authors = ["Your Name <you@example.com>"] # Change this
readme = "README.md"
packages = [{include = "astroquery_cli"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0" 
typer = {extras = ["all"], version = "^0.9.0"} # "all" extras include shellingham for better completion detection
rich = "^13.5.2"
astroquery = "^0.4.6"
astropy = "^5.3.3" # Explicitly list if needed for specific version

[tool.poetry.group.dev.dependencies] # Optional: for development
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# This is the crucial part for the CLI command
[tool.poetry.scripts]
aq = "astroquery_cli.main:app" # 'aq' will be the command, pointing to the Typer app
# You can also use a longer name like 'astroquery-cli'
# astroquery-cli = "astroquery_cli.main:app"
